force-app/main/default/objects/c2g__codaInvoice__c/c2g__codaInvoice__c.object-meta.xml
<CustomObject>
    <customHelpPage>c2g__codahelpinvoice</customHelpPage>
    <description>Holds information that applies to the whole invoice such as customer account and due date.</description>
    <label>Sales Invoice</label>
    <nameField>
        <displayFormat>SIN{000000}</displayFormat>
        <label>Invoice Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Invoices</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>