force-app/main/default/objects/c2g__codaInvoice__c/fields/cer_Auto_Post__c.field-meta.xml
<CustomField>
    <fullName>cer_Auto_Post__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used for the FFA Document Utility package installed to auto post invoices when this is set to true. Scheduled Job runs daily</description>
    <label>Auto Post</label>
    <type>Checkbox</type>
</CustomField>