force-app/main/default/objects/c2g__codaInvoice__c/fields/cer_Email_Sent__c.field-meta.xml
<CustomField>
    <fullName>cer_Email_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Email Sent</label>
    <type>Checkbox</type>
</CustomField>