force-app/main/default/objects/c2g__codaInvoice__c/fields/cer_Email_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>cer_Email_Sent_Date__c</fullName>
    <label>Email Sent Date</label>
    <type>Date</type>
</CustomField>