force-app/main/default/objects/c2g__codaInvoice__c/fields/ffaci__CongaTemplate__c.field-meta.xml
<CustomField>
    <fullName>ffaci__CongaTemplate__c</fullName>
    <formula>c2g__OwnerCompany__r.ffaci__CongaTemplateSalesInvoice__c</formula>
    <inlineHelpText>Conga Template</inlineHelpText>
    <label>Conga Template</label>
    <type>Text</type>
</CustomField>