force-app/main/default/objects/c2g__codaInvoice__c/listViews/ffaws__InvoicesOnHold.listView-meta.xml
<ListView>
    <fullName>ffaws__InvoicesOnHold</fullName>
    <booleanFilter>1 AND ( 2 OR 3 )</booleanFilter>
    <columns>NAME</columns>
    <columns>c2g__Account__c</columns>
    <columns>c2g__CompanyReference__c</columns>
    <columns>c2g__PaymentStatus__c</columns>
    <columns>c2g__Period__c</columns>
    <columns>c2g__OutstandingValue__c</columns>
    <columns>c2g__InvoiceDate__c</columns>
    <columns>c2g__DueDate__c</columns>
    <columns>c2g__InvoiceStatus__c</columns>
    <columns>c2g__HoldStatus__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>c2g__HoldStatus__c</field>
        <operation>equals</operation>
        <value>On Hold</value>
    </filters>
    <filters>
        <field>c2g__PaymentStatus__c</field>
        <operation>equals</operation>
        <value>Unpaid</value>
    </filters>
    <filters>
        <field>c2g__PaymentStatus__c</field>
        <operation>equals</operation>
        <value>Part Paid</value>
    </filters>
    <label>Invoices On Hold</label>
</ListView>