force-app/main/default/objects/c2g__codaInvoice__c/listViews/ffaws__SalesInvoicesOnHold.listView-meta.xml
<ListView>
    <fullName>ffaws__SalesInvoicesOnHold</fullName>
    <columns>NAME</columns>
    <columns>c2g__Account__c</columns>
    <columns>c2g__CompanyReference__c</columns>
    <columns>c2g__PaymentStatus__c</columns>
    <columns>c2g__Period__c</columns>
    <columns>c2g__OutstandingValue__c</columns>
    <columns>c2g__InvoiceDate__c</columns>
    <columns>c2g__DueDate__c</columns>
    <columns>c2g__InvoiceStatus__c</columns>
    <columns>c2g__HoldStatus__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>c2g__HoldStatus__c</field>
        <operation>equals</operation>
        <value>On Hold</value>
    </filters>
    <filters>
        <field>c2g__PaymentStatus__c</field>
        <operation>equals</operation>
        <value>Unpaid,Part Paid</value>
    </filters>
    <label>On Hold for Collections</label>
    <language>en_US</language>
</ListView>